--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-easy-crop": "^5.5.0",
     "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
