--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -4,6 +4,7 @@ services:
     env: python
     buildCommand: ""
     startCommand: gunicorn app:app
+    pythonVersion: 3.10
     envVars:
       - key: FLASK_ENV
         value: production
