--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,4 +11,4 @@ python-dotenv==1.0.0
 SQLAlchemy==2.0.41
 typing_extensions==4.14.1
 Werkzeug==3.1.3
-pip freeze | grep gunicorn >> requirements.txt
+gunicorn
