--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,9 +2,9 @@ services:
   - type: web
     name: bodega-cat-api
     env: python
-    buildCommand: ""
+    buildCommand: "pip install -r requirements.txt"
     startCommand: gunicorn app:app
-    pythonVersion: 3.10
+    pythonVersion: "3.10"
     envVars:
       - key: FLASK_ENV
         value: production
