--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+
 blinker==1.9.0
 click==8.2.1
 Flask==2.3.3
@@ -6,7 +7,7 @@ Flask-SQLAlchemy==3.0.5
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
-Pillow==10.0.0
+Pillow>=10.4.0
 python-dotenv==1.0.0
 SQLAlchemy==2.0.41
 typing_extensions==4.14.1
